--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@observablehq/framework": "latest",
     "@turf/turf": "^7.2.0",
+    "clusterize.js": "^1.0.0",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
     "leaflet-draw": "^1.0.4",
