--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clusterize.js": "^1.0.0",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
+    "flubber": "^0.4.2",
     "leaflet-draw": "^1.0.4",
     "turf": "^3.0.14"
   },
